--- a/index.html
+++ b/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bootstrap Freelancer</title>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.0/css/all.min.css"
+        integrity="sha512-10/jx2EXwxxWqCLX/hHth/vu2KY3jCF70dCQB8TSgNjbCVAC/8vai53GfMDrO2Emgwccf2pJqxct9ehpzG+MTw=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css">
@@ -15,78 +19,127 @@
 <body class="debug">
 
     <header id="header_site">
-     
+
         <nav class="navbar navbar-expand-md navbar-dark bg_freelancer_primary text-uppercase ">
             <div class="container-lg">
-              <a class="navbar-brand" href="#">start bootstrap</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-md-0">
-                  <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">portfoglio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">about</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">contacts</a>
-                  </li>
-                  
-              </div>
+                <a class="navbar-brand" href="#">start bootstrap</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-md-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">portfoglio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">about</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">contacts</a>
+                        </li>
+
+                </div>
             </div>
-          </nav>
+        </nav>
         <!-- /Navbar -->
 
     </header>
     <!-- /#header_site -->
 
     <main id="main_site">
-        <div class="container jumbotron">
-            <div class="row justify-content-center">
-                <div class="col justify-content-center text-uppercase text-center">
 
-                    <img src="./assets/img/avatar.svg" class="rounded mx-auto d-block p-2" alt="...">
-                    <h2 class="">start bootstrap</h2>
-                    <h5>graphic artist - web designer - illustrator</h5>
+        <div class="container-fuid bg_freelancer_secondary p-3">
+            <div class="container jumbotron bg_freelancer_secondary text-white">
+                <div class="row justify-content-center">
+                    <div class="col justify-content-center text-uppercase text-center">
+
+                        <img src="./assets/img/avatar.svg" class="rounded mx-auto d-block" alt="...">
+                        <h2 class="mt-3">start bootstrap</h2>
+
+                        <!-- Star -->
+                        <div class="container w-50">
+                            <div class="row row-cols-3 justify-content-center">
+                                <div class="col">
+                                    <hr class="">
+                                </div>
+                                <div class="col w-25"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                        fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                        <path
+                                            d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                    </svg></div>
+                                <div class="col">
+                                    <hr class="">
+                                </div>
+                            </div>
+
+                        </div>
+                        <h5>graphic artist - web designer - illustrator</h5>
+                    </div>
+                    <!-- ./col -->
                 </div>
-                <!-- ./col -->
+
+
             </div>
 
-
         </div>
+
 
         <!-- /.jumbotron -->
 
         <section class="portfoglio py-4" id="portfoglio">
             <div class="container">
                 <h2 class="text-center">Portfoglio</h2>
-                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
+                <div class="row gy-2 row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
 
                     <div class="col">
+                        <div class="box-img">
+                            <img class="img-fluid rounded-2" src="./assets/img/cabin.png" alt="">
+                        </div>
 
                     </div>
                     <!-- ./col -->
+
                     <div class="col">
+                        <div class="box-img">
+                            <img class="img-fluid rounded-2" src="./assets/img/cake.png" alt="">
+                        </div>
 
                     </div>
                     <!-- ./col -->
+
                     <div class="col">
+                        <div class="box-img">
+                            <img class="img-fluid rounded-2" src="./assets/img/circus.png " alt="">
+                        </div>
 
                     </div>
                     <!-- ./col -->
+
                     <div class="col">
+                        <div class="box-img">
+                            <img class="img-fluid rounded-2" src="./assets/img/game.png " alt="">
+                        </div>
 
                     </div>
                     <!-- ./col -->
+
                     <div class="col">
+                        <div class="box-img">
+                            <img class="img-fluid rounded-2" src="./assets/img/safe.png " alt="">
+                        </div>
 
                     </div>
                     <!-- ./col -->
+
                     <div class="col">
+                        <div class="box-img">
+                            <img class="img-fluid rounded-2" src="./assets/img/submarine.png " alt="">
+                        </div>
 
                     </div>
+
                     <!-- ./col -->
 
                 </div>
@@ -97,48 +150,88 @@
         <!-- .portfoglio -->
 
 
-        <section class="about py-4">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-10 col-md-8">
-                        <div class="row">
-                            <div class="col">
+        <section class="about py-4 bg_freelancer_secondary">
 
-                            </div>
-                            <!-- ./col -->
+            <div class="container w-50 text-white ">
+                <h2 class="text-center text-uppercase">About</h2>
 
-                        </div>
-                        <!-- ./row -->
+                <div class="row row-cols-3 text-center justify-content-center">
+                    <div class="col">
+                        <hr class="+">
+                    </div>
+                    <div class="col w-25"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                            fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                            <path
+                                d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                        </svg></div>
+                    <div class="col">
+                        <hr class="">
+                    </div>
+                </div>
 
-                        <div class="row row-cols-1 row-cols-md-2 justify-content-center">
-                            <div class="col">
 
-                            </div>
-                            <!-- ./col -->
-                            <div class="col">
+                <div class="row row-cols-1 row-cols-md-2">
+                    <div class="col">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem magnam quibusdam,
+                            perspiciatis, esse quos dolorem illum ex sed nesciunt est, molestiae porro nisi accusantium
+                            doloremque ipsa rerum eius nam maiores?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore facilis corporis dolor ab,
+                            mollitia doloribus necessitatibus eaque architecto voluptatem? Eligendi?
+                        </p>
 
-                            </div>
-                            <!-- ./col -->
 
-                        </div>
-                        <div class="row">
-                            <div class="col">
+                    </div>
+                    <div class="col">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptatem magnam quibusdam,
+                            perspiciatis, esse quos dolorem illum ex sed nesciunt est, molestiae porro nisi accusantium
+                            doloremque ipsa rerum eius nam maiores?
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore facilis corporis dolor ab,
+                            mollitia doloribus necessitatibus eaque architecto voluptatem? Eligendi?
+                        </p>
+                    </div>
+                </div>
+                <div class="row text-center mt-3">
+                    <div class="col">
+                        <a href="">
+                            <button type="button" class="btn  text-white bg_freelancer_secondary btn-outline-light "><i
+                                    class="bi bi-download me-2"></i><span>Download</span>
+                            </button>
 
-                            </div>
-                            <!-- ./col -->
-
-                        </div>
-                        <!-- ./row -->
+                        </a>
 
                     </div>
                 </div>
+
+
             </div>
         </section>
         <!-- /.about -->
 
         <section class="contacts py-4">
+
             <div class="container">
                 <div class="row justify-content-center">
+
+                    <h2 class="text-upper text-center mt-2">Contacts</h2>
+                    <div class="container text-center w-50">
+
+                        <div class="row row-cols-3 justify-content-center">
+                            <div class="col">
+                                <hr class="">
+                            </div>
+                            <div class="col w-25"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16"
+                                    fill="currentColor" class="bi bi-star-fill" viewBox="0 0 16 16">
+                                    <path
+                                        d="M3.612 15.443c-.386.198-.824-.149-.746-.592l.83-4.73L.173 6.765c-.329-.314-.158-.888.283-.95l4.898-.696L7.538.792c.197-.39.73-.39.927 0l2.184 4.327 4.898.696c.441.062.612.636.282.95l-3.522 3.356.83 4.73c.078.443-.36.79-.746.592L8 13.187l-4.389 2.256z" />
+                                </svg></div>
+                            <div class="col">
+                                <hr class="">
+                            </div>
+                        </div>
+
+                    </div>
                     <div class="col-10 col-md-8">
 
 
@@ -147,6 +240,33 @@
                     </div>
                     <!-- ./col -->
                 </div>
+
+                <form>
+                    <div class="mb-3 border-bottom">
+                        <label for="exampleName" class="form-label d-none">Name</label>
+                        <input type="text" class="form-control border-0" placeholder="Name" id="exampleInputName"
+                            aria-describedby="emailHelp">
+                    </div>
+
+                    <div class="mb-3 border-bottom">
+                        <label for="exampleInputEmail1" class="form-label d-none">Email address</label>
+                        <input type="email" class="form-control border-0" placeholder="Email Address"
+                            id="exampleInputEmail1" aria-describedby="emailHelp">
+
+                    </div>
+                    <div class="mb-3 border-bottom">
+                        <label for="exampleaddress" class="form-label d-none">Address</label>
+                        <input type="text" class="form-control border-0 " placeholder="Phone Number"
+                            id="exampleInputName" aria-describedby="emailHelp">
+                    </div>
+                    <div class="mb-3 mt-2 ps-2 border-bottom">
+                        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+                        <textarea class="form-control border-0" id="exampleFormControlTextarea1" rows="3"></textarea>
+                    </div>
+                    <button type="submit" class="btn text-white bg_freelancer_secondary">Submit</button>
+                </form>
+
+
                 <!-- ./row -->
             </div>
         </section>
