Bonus: Add Portfoglio page

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
         <nav class="navbar navbar-expand-md navbar-dark bg_freelancer_primary text-uppercase ">
             <div class="container-lg">
-                <a class="navbar-brand" href="#">start bootstrap</a>
+                <a class="navbar-brand" href="/index.html">start bootstrap</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -31,10 +31,10 @@
                 <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
                     <ul class="navbar-nav me-auto mb-2 mb-md-0">
                         <li class="nav-item">
-                            <a class="nav-link active" aria-current="page" href="#">portfoglio</a>
+                            <a class="nav-link active" aria-current="page" href="/portfoglio.html">portfoglio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="#">about</a>
+                            <a class="nav-link" href="/about.html">about</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="#">contacts</a>
@@ -88,9 +88,37 @@
         </div>
         <!-- /.jumbotron -->
 
-        <section class="portfoglio" id="portfoglio">
+        <section class="portfoglio pt-4" id="portfoglio">
             <div class="container">
-                <h2 class="text-center py-4">Portfoglio</h2>
+                <div class="row justify-content-center pb-3">
+                    <h2 class="text-center ">Portfoglio</h2>
+
+                    <div class="container text-center star mb-2">
+                        <div class="row justify-content-center align-itmes-center">
+
+
+                            <div class="col">
+                                <span class="placeholder w-25"></span>
+
+                                <i class="fa-solid fa-star"></i>
+
+                                <span class="placeholder w-25"></span>
+                            </div>
+
+                        </div>
+
+                    </div>
+                    <!-- ./star -->
+
+                    <div class="col-10 col-md-8">
+
+
+
+
+                    </div>
+                    <!-- ./col -->
+                </div>
+
 
                 <div class="row gy-2 row-cols-1 row-cols-md-2 row-cols-lg-3 justify-content-center">
 
@@ -210,7 +238,7 @@
         </section>
         <!-- /.about -->
 
-        <section class="contacts py-4">
+        <section class="contacts py-3">
 
             <div class="container ">
 
@@ -275,13 +303,13 @@
     <footer id="footer_site" class="text-light bg_freelancer_light">
 
         <div class="container-md justify-content-center py-4 ">
-            <div class="row m-auto text-center gy-3">
-                <div class="col-12 col-md-4 ">
+            <div class="row row-cols-1 row-cols-md-3 m-auto text-center gy-4">
+                <div class="col">
                     <h4 class="text-uppercase">Location</h4>
                     <span>Lorem ipsum dolor sit amet consectetur adipisicing elit.</span>
                 </div>
                 <!-- ./col -->
-                <div class="col-12 col-md-4 ">
+                <div class="col">
                     <h4 class="text-uppercase">Around the web </h4>
                     <div class="mt-2 icons">
                         <i class="fa-brands fa-facebook-f  p-2 border rounded-circle"></i>
@@ -292,7 +320,7 @@
                     </div>
                 </div>
                 <!-- ./col -->
-                <div class="col-12 col-md-4 ">
+                <div class="col">
                     <h4 class="text-uppercase">About freelancer</h4>
                     <span> Lorem ipsum, dolor sit amet consectetur adipisicing elit. Sint cum ipsam <a href="#">voluptates</a> 
                         voluptatibus? Est.
@@ -307,7 +335,7 @@
         <!-- /.container-md -->
 
         <div class="container-fluid">
-            <div class="row text-center p-5 bg_freelancer_primary">
+            <div class="row text-center p-4 bg_freelancer_primary">
                 <div class="col">
                     <span>Lorem, ipsum dolor.</span>
 
