--- a/about.html
+++ b/about.html
@@ -56,9 +56,9 @@
 
 
   <main class="form-signin text-center">
-    <form class="bg_freelancer_primary p-5 rounded-2 text-light">
+    <form class="bg_freelancer_primary p-5 rounded-2 text-light shadow p-3 mb-5 bg-body rounded">
       <img class="mb-4" src="./assets/img/avatar.svg" alt="" width="72" height="57">
-      <h1 class="h3 mb-3 fw-normal">Please sign in</h1>
+      <h1 class="h3 mb-3 fw-normal text-dark">Please sign in</h1>
 
       <div class="form-floating text-dark">
         <input type="email" class="form-control" id="floatingInput" placeholder="name@example.com">
@@ -69,7 +69,7 @@
         <label for="floatingPassword">Password</label>
       </div>
 
-      <div class="checkbox mb-3">
+      <div class="checkbox mb-3 text-dark">
         <label>
           <input type="checkbox" value="remember-me"> Remember me
         </label>
