--- a/about.html
+++ b/about.html
@@ -26,7 +26,7 @@
 
     <nav class="navbar navbar-expand-md navbar-dark bg_freelancer_primary text-uppercase ">
         <div class="container-lg">
-            <a class="navbar-brand" href="/index.html">start bootstrap</a>
+            <a class="navbar-brand" href="index.html">start bootstrap</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                 data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                 aria-expanded="false" aria-label="Toggle navigation">
@@ -35,10 +35,10 @@
             <div class="collapse navbar-collapse flex-grow-0" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-md-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="/portfoglio.html">portfoglio</a>
+                        <a class="nav-link active" aria-current="page" href="portfoglio.html">portfoglio</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about.html">about</a>
+                        <a class="nav-link" href="about.html">about</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">contacts</a>
