--- a/portfoglio.html
+++ b/portfoglio.html
@@ -99,9 +99,9 @@
                     <!-- ./col -->
                 </div>
 
-                <div class="row row-cols-2 row-cols-md-4 row-cols-lg-4 gy-4">
+                <div class="row row-cols-1 row-cols-md-2 row-cols-lg-3 row-cols-xl-4 gx-1 gy-4 ">
 
-                    <div class="col">
+                    <div class="col d-flex justify-content-center ">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/cabin.png" alt="Card image cap">
                             <div class="card-body">
@@ -115,7 +115,7 @@
                     </div>
                     <!-- /.col -->
 
-                    <div class="col">
+                    <div class="col d-flex justify-content-center ">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/cake.png" alt="Card image cap">
                             <div class="card-body">
@@ -129,7 +129,7 @@
                     </div>
                     <!-- /.col -->
 
-                    <div class="col">
+                    <div class="col d-flex justify-content-center ">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/circus.png" alt="Card image cap">
                             <div class="card-body">
@@ -143,7 +143,7 @@
                     </div>
                     <!-- /.col -->
 
-                    <div class="col">
+                    <div class="col d-flex justify-content-center ">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/game.png" alt="Card image cap">
                             <div class="card-body">
@@ -157,7 +157,7 @@
                     </div>
                     <!-- /.col -->
 
-                    <div class="col">
+                    <div class="col d-flex justify-content-center ">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/safe.png" alt="Card image cap">
                             <div class="card-body">
@@ -171,7 +171,7 @@
                     </div>
                     <!-- /.col -->
 
-                    <div class="col">
+                    <div class="col d-flex justify-content-center ">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/submarine.png" alt="Card image cap">
                             <div class="card-body">
@@ -185,7 +185,7 @@
                     </div>
                     <!-- /.col -->
 
-                    <div class="col">
+                    <div class="col d-flex justify-content-center ">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/cabin.png" alt="Card image cap">
                             <div class="card-body">
@@ -199,7 +199,7 @@
                     </div>
                     <!-- /.col -->
 
-                    <div class="col">
+                    <div class="col d-flex justify-content-center ">
                         <div class="card" style="width: 18rem;">
                             <img class="card-img-top" src="./assets/img/cake.png" alt="Card image cap">
                             <div class="card-body">
